<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/medicine_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?attr/actionBarSize">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicine_name"
            android:inputType="text"
            android:visibility="visible" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/medicine_times_per_day_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/medicine_times_per_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/times_per_day"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/medicine_last_taken_time_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/medicine_last_taken_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:hint="@string/last_time_you_took_it" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/medicine_last_taken_time_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />
    </FrameLayout>

    <Spinner
        android:id="@+id/medicine_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finished_course"
        android:visibility="gone" />
</LinearLayout>