<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/last_taken_at_frame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/last_dosage"
        android:textColor="@color/grey_4d4d4d"
        android:textSize="@dimen/font_17sp" />

    <FrameLayout
        android:id="@+id/last_taken_at_frame"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:contentDescription="@string/medicine_last_taken_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circle_outer_background" />

        <TextView
            android:id="@+id/medicine_last_taken_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/grey_4d4d4d"
            android:textSize="@dimen/font_17sp"
            android:textStyle="bold"
            tools:text="10:30 AM" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/next_taken_at_frame"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/next_dosage"
        android:textColor="@color/grey_4d4d4d"
        android:textSize="@dimen/font_17sp" />

    <FrameLayout
        android:id="@+id/next_taken_at_frame"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <ImageView
            android:contentDescription="@string/medicine_next_time_to_take"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/circle_outer_background" />

        <TextView
            android:id="@+id/medicine_next_taken_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/grey_4d4d4d"
            android:textSize="@dimen/font_17sp"
            android:textStyle="bold"
            tools:text="10:30 AM" />

    </FrameLayout>

</RelativeLayout>