<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/medicine_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_30sp"
        android:textStyle="bold" />

    <include
        android:id="@+id/medicine_time_layout"
        layout="@layout/medicine_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/medicine_type_image"
        android:layout_below="@id/medicine_name"
        android:layout_marginBottom="@dimen/dimen_40dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_40dp" />

    <ImageView
        android:id="@+id/medicine_type_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/white_curved_background"
        android:contentDescription="@string/medicine_type_description"
        android:src="@drawable/pills" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/finished_course_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/finished_medicine_course"
        android:src="@drawable/ic_action_delete"
        app:fabSize="auto" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/take_medicine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/take_medicine"
        android:src="@drawable/ic_action_take_medicine"
        app:fabSize="auto" />
</RelativeLayout>